--- a/external/storm-lb/pom.xml
+++ b/external/storm-lb/pom.xml
@@ -123,7 +123,14 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
+      <!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
+      <dependency>
+          <groupId>org.apache.zookeeper</groupId>
+          <artifactId>zookeeper</artifactId>
+          <version>3.3.6</version>
+      </dependency>
+
+      <dependency>
       <groupId>org.hdrhistogram</groupId>
       <artifactId>HdrHistogram</artifactId>
     </dependency>
