--- a/external/storm-lb/pom.xml
+++ b/external/storm-lb/pom.xml
@@ -178,8 +178,14 @@
       <artifactId>storm-core</artifactId>
       <version>${project.version}</version>
       <!-- keep storm out of the jar-with-dependencies -->
-       <!-- <scope>provided</scope> -->
+        <!-- <scope>provided</scope> --> 
     </dependency>
+     <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+<dependency>
+    <groupId>com.googlecode.json-simple</groupId>
+    <artifactId>json-simple</artifactId>
+    <version>1.1</version>
+</dependency>
       <dependency>
           <groupId>org.apache.storm</groupId>
           <artifactId>storm-core</artifactId>
